# reddit-code-formatter

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  cmdline.cpp  cmdline.hpp  config.hpp.in  main.cpp  reddit_code_formatter.hpp  span.hpp  tokenizer.cpp  tokenizer.hpp  tokens.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  cmdline_tests.cpp  testing.hpp  tokenizer_tests.cpp
